force-app/main/default/objects/Education_History__c/Education_History__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Education History</label>
    <nameField>
        <displayFormat>EducationHistory-{0000}</displayFormat>
        <label>Education History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>