force-app/main/default/objects/Education_History__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <label>Education / Training Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Documented</fullName>
            </value>
            <value>
                <fullName>Self-Reported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>