force-app/main/default/objects/Education_History__c/fields/Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Education_Level__c</fullName>
    <label>Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than High School graduate</fullName>
            </value>
            <value>
                <fullName>Enrolled in high school</fullName>
            </value>
            <value>
                <fullName>Enrolled in college/training</fullName>
            </value>
            <value>
                <fullName>High school grad</fullName>
            </value>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>Some college credits (no degree)</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Associate degree</fullName>
            </value>
            <value>
                <fullName>BA degree or &gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>