force-app/main/default/objects/Education_History__c/fields/Education_Training_Description__c.field-meta.xml
<CustomField>
    <fullName>Education_Training_Description__c</fullName>
    <inlineHelpText>Please include Institution Name if applicable.</inlineHelpText>
    <label>Education / Training Description</label>
    <type>TextArea</type>
</CustomField>