force-app/main/default/objects/Education_History__c/fields/Education_Training_Start_Date_old__c.field-meta.xml
<CustomField>
    <fullName>Education_Training_Start_Date_old__c</fullName>
    <inlineHelpText>Please estimate if exact date is not known.</inlineHelpText>
    <label>Education / Training Start Date - old</label>
    <type>Date</type>
</CustomField>