force-app/main/default/objects/Education_History__c/fields/Education_Training_Started__c.field-meta.xml
<CustomField>
    <fullName>Education_Training_Started__c</fullName>
    <label>Education / Training Started</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Before Starting Program</fullName>
                <default>true</default>
                <label>Before Starting Program</label>
            </value>
            <value>
                <fullName>During Transformations/Job Search</fullName>
            </value>
            <value>
                <fullName>During Retention Services</fullName>
            </value>
            <value>
                <fullName>During Advancement Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>