force-app/main/default/objects/Education_History__c/fields/Education_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>Education_Training_Status__c</fullName>
    <label>Education / Training Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Graduated / completed</fullName>
            </value>
            <value>
                <fullName>In progress at time of data entry</fullName>
            </value>
            <value>
                <fullName>Did not graduate / complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>