force-app/main/default/objects/Education_History__c/fields/ETO_Education_Completed__c.field-meta.xml
<CustomField>
    <fullName>ETO_Education_Completed__c</fullName>
    <formula>ispickval(Education_Training_Status__c, &quot;Graduated / completed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETO Education Completed</label>
    <type>Checkbox</type>
</CustomField>