force-app/main/default/objects/Education_History__c/fields/ETO_Education_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>ETO_Education_Training_Status__c</fullName>
    <formula>Case (Education_Training_Status__c,
&quot;Graduated / completed&quot;, &quot;Graduated/Pass entire program&quot;,
&quot;In progress at time of data entry&quot;, &quot;Pass part&quot;,
&quot;Did not graduate / complete&quot;, &quot;Dropped Out&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETO Education / Training Status</label>
    <type>Text</type>
</CustomField>