force-app/main/default/objects/Education_History__c/fields/ETO_Education_Type__c.field-meta.xml
<CustomField>
    <fullName>ETO_Education_Type__c</fullName>
    <formula>case (Education_Training_Type__c, 
&quot;&gt;8th Grade (No Diploma/GED)&quot;, &quot;High School&quot;,
&quot;High School Diploma&quot;, &quot;High School&quot;,
&quot;GED&quot;, &quot;GED&quot;,
&quot;Associate&apos;s Degree&quot;, &quot;Associates&quot;,
&quot;Undergrad Degree&quot;, &quot;Bachelors&quot;,
&quot;Graduate Degree&quot;, &quot;Masters&quot;,
&quot;ESL&quot;, &quot;Basic Skills i.e. ABE, ESL&quot;,
&quot;Vocational&quot;, &quot;Vocational Training&quot;, 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETO Education Type</label>
    <type>Text</type>
</CustomField>