force-app/main/default/objects/Education_History__c/fields/ETO_Participant_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ETO_Participant_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>ETO Participant Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>