force-app/main/default/objects/Education_History__c/fields/Legacy_Education_ID_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Education_ID_Access__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>From Education table in legacy Access database.</inlineHelpText>
    <label>Legacy Education ID (Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>