force-app/main/default/objects/Education_History__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Please estimate if exact date is not known.</inlineHelpText>
    <label>Education / Training Start Date</label>
    <type>Date</type>
</CustomField>